--- a/index.html
+++ b/index.html
@@ -6,15 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <p>
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores magni
-      nulla consequatur autem natus aut repellat sit nostrum excepturi
-      exercitationem.
-    </p>
-    <form action="">
-        <input type="email">
-        <input type="password" name="" id="">
-        <button>登入</button>
-    </form>
+    <h1>這是 master branch</h1>
   </body>
 </html>
