Change from h1 tag to p tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
   </head>
   <body>
-    <h1>這是 master branch</h1>
+    <p>This is my master branch</p>
   </body>
 </html>
